force-app/main/default/objects/SIS_Request_Log__c/SIS_Request_Log__c.object-meta.xml
<CustomObject>
    <description>Custom object to house all TSE request logs</description>
    <label>SIS Request Log</label>
    <nameField>
        <displayFormat>SIS-{000000}</displayFormat>
        <label>SIS Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIS Request Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>