force-app/main/default/objects/SIS_Request_Log__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>IF(
ISPICKVAL(Opportunity__r.StageName, &quot;Incubate&quot;), &quot;Incubate&quot;,
IF(ISPICKVAL(Opportunity__r.StageName, &quot;Qualified&quot;), &quot;Qualified&quot;,
IF(ISPICKVAL(Opportunity__r.StageName, &quot;Trial&quot;), &quot;Trial&quot;,
IF(ISPICKVAL(Opportunity__r.StageName, &quot;Proposal&quot;), &quot;Proposal&quot;,
IF(ISPICKVAL(Opportunity__r.StageName, &quot;Purchase&quot;), &quot;Purchase&quot;,
IF(ISPICKVAL(Opportunity__r.StageName, &quot;Decision&quot;), &quot;Decision&quot;,
IF(ISPICKVAL(Opportunity__r.StageName, &quot;Closing&quot;), &quot;Closing&quot;,
IF(ISPICKVAL(Opportunity__r.StageName, &quot;Orders Processing&quot;), &quot;Orders Processing&quot;,
IF(ISPICKVAL(Opportunity__r.StageName, &quot;Ready to Ship&quot;), &quot;Ready to Ship&quot;,
IF(ISPICKVAL(Opportunity__r.StageName, &quot;Closed Won&quot;), &quot;Closed Won&quot;,
IF(ISPICKVAL(Opportunity__r.StageName, &quot;Closed Lost&quot;), &quot;Closed Lost&quot;,&quot;&quot;
)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>