force-app/main/default/objects/SIS_Request_Log__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://samsaradev.atlassian.net/browse/GTMS-10945</description>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipName>TSE_Request_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>