force-app/main/default/objects/SIS_Request_Log__c/fields/Request_Owner__c.field-meta.xml
<CustomField>
    <fullName>Request_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to populate the submitter of the TSE request.</description>
    <label>Request Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TSE_Request_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>