force-app/main/default/objects/SIS_Request_Log__c/fields/SE_Assignment__c.field-meta.xml
<CustomField>
    <fullName>SE_Assignment__c</fullName>
    <formula>Opportunity__r.SE_Assignment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SE Assignment</label>
    <type>Text</type>
</CustomField>