force-app/main/default/objects/SIS_Request_Log__c/fields/Signed_SoW__c.field-meta.xml
<CustomField>
    <fullName>Signed_SoW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzzSigned SoW</label>
    <type>Checkbox</type>
</CustomField>