force-app/main/default/objects/SIS_Request_Log__c/fields/Total_Pipeline_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Pipeline_Number__c</fullName>
    <formula>Account__r.Total_Pipeline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pipeline Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>