force-app/main/default/objects/SIS_Request_Log__c/fields/Trial_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Trial_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trial Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>TSE_Request_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>