force-app/main/default/objects/SIS_Request_Log__c/recordTypes/SIS_Office_Hours_In_Take_Form.recordType-meta.xml
<RecordType>
    <fullName>SIS_Office_Hours_In_Take_Form</fullName>
    <active>true</active>
    <label>SIS Office Hours - In Take Form</label>
</RecordType>