force-app/main/default/objects/SIS_Request_Log__c/recordTypes/SIS_Request_Log_Layout.recordType-meta.xml
<RecordType>
    <fullName>SIS_Request_Log_Layout</fullName>
    <active>true</active>
    <label>SIS Project Request - In Take Form</label>
</RecordType>