force-app/main/default/objects/SIS_Request_Log__c/validationRules/Request_Summary.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Summary</fullName>
    <active>true</active>
    <description>Please fill out request summary</description>
    <errorConditionFormula>ISNULL( Request_Summary__c )</errorConditionFormula>
    <errorDisplayField>Request_Summary__c</errorDisplayField>
    <errorMessage>Please fill out request summary field before saving</errorMessage>
</ValidationRule>